--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "dependencies": {
     "telegram-bot-api": "~0.3.1",
     "lodash": "~3.10.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-copy": "0.0.2",
+    "gulp-typescript": "^2.13.6"
   }
 }
