--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "type": "git",
     "url": "https://github.com/aquibm/telegram-game-invites-bot"
   },
+  "scripts": {
+    "clean": "rm -rf dist && mkdir dist",
+    "start": "node dist/index.js",
+    "build": "babel src -d dist --presets es2015",
+    "watch": "npm run build -- --watch"
+  },
   "keywords": [
     "game",
     "invites",
@@ -14,5 +20,18 @@
     "bot"
   ],
   "author": "Aquib Master",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "node-telegram-bot-api": "^0.23.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
