--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
-    "start": "node dist/index.js",
-    "build": "babel src -d dist --presets es2015",
-    "watch": "npm run build -- --watch"
+    "lint": "esw src --color",
+    "lint:watch": "npm run lint -- --watch",
+    "test": "",
+    "test:watch": "",
+    "tdd": "",
+    "start:dev": "",
+    "start": "",
+    "prestart": ""
   },
   "keywords": [
     "game",
@@ -27,11 +32,12 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "babel-preset-es2015": "^6.14.0",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.0.0",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-watch": "^2.1.14",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2"
   }
 }
