Setup unit tests

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "clean": "rm -rf dist && mkdir dist",
     "lint": "esw src --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "",
-    "test:watch": "",
+    "test": "mocha tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
+    "test:watch": "npm run test -- --watch",
     "tdd": "",
     "start:dev": "",
     "start": "",
@@ -33,6 +33,8 @@
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
+    "chai": "^3.5.0",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.0.0",
     "eslint-plugin-import": "^1.14.0",
