--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
-    "lint": "esw src --color",
+    "lint": "esw src --color --ignore-pattern *.spec.js",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
     "test:watch": "npm run test -- --watch",
-    "tdd": "",
+    "build": "babel src -d dist --ignore spec.js",
+    "build:watch": "npm run build -- --watch",
+    "build:dist": "npm-run-all clean lint test build",
+    "tdd": "npm run clean && npm-run-all --parallel lint:watch test:watch build:watch",
     "start:dev": "",
     "start": "",
     "prestart": ""
@@ -40,6 +43,7 @@
     "eslint-plugin-import": "^1.14.0",
     "eslint-watch": "^2.1.14",
     "mocha": "^3.0.2",
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.10.2",
+    "npm-run-all": "^3.1.0"
   }
 }
