--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.0.0",
     "eslint-plugin-import": "^1.14.0",
     "eslint-watch": "^2.1.14",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
-    "npm-run-all": "^3.1.0"
+    "npm-run-all": "^3.1.0",
+    "simple-mock": "^0.7.0"
   }
 }
